src/views/snapshots/git_local_review__views__review_create__tests__review_create_view_render_default.snap
---
source: src/views/review_create.rs
expression: "get_review_create_view_terminal_backend(&app, &view)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ╭Create New Review─────────────────────────────╮                "
"                │Title:                                        │                "
"                │┌────────────────────────────────────────────┐│                "
"                ││                                            ││                "
"                │└────────────────────────────────────────────┘│                "
"                │Press Enter to create, Esc to cancel          │                "
"                │                                              │                "
"                ╰──────────────────────────────────────────────╯                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
